--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Direct Final Value Calculator</title>
+    <title>AmitTG</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
 <body>
 
 <div class="container">
-    <h2>🎯 Direct Final Value</h2>
+    <h2>AmitTG</h2>
     
     <label for="amount">Enter Amount:</label>
     <input type="number" id="amount" placeholder="e.g., 1000" min="0" step="any">
